manifests/ingress/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-app
  namespace: learning
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress-app
  template:
    metadata:
      labels:
        app: nginx-ingress-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
