manifests/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: learning
spec:
  selector:
    app: nginx-ingress-app
  ports:
    - port: 80
      targetPort: 80
